# synchronizer

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  skills.md
examples/: language_family_poc_intent.rs  validate.rs
release-trains/: README.md  language-family-owner-fix.nota  language-family-poc.nota
release-trains/language-family-owner-fix/: flake.nix  release-train.lock.json
src/: build_verify.rs  cargo_lock.rs  cargo_manifest.rs  component_manifests.rs  configuration.rs  driver.rs  error.rs  flake_lock.rs  flake_manifest.rs  git_repository.rs  lib.rs  main.rs  release_train.rs  report.rs  role_resolution.rs  toml_document.rs  toml_pretty.rs  topology.rs  transitive_lock.rs  types.rs  version_resolver.rs
tests/: build_verify.rs  cargo_lock.rs  cargo_manifest.rs  configuration.rs  driver.rs  flake_lock.rs  flake_manifest.rs  git_repository.rs  nix_resolution.rs  release_train.rs  release_train_run.rs  report.rs  role_resolution.rs  staged_cascade.rs  topology.rs  transitive_gap.rs  version_resolver.rs
tests/fixtures/: mod.rs
